Fixed alterversion alignment

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2148,21 +2148,26 @@ hr {
             position: relative;
             margin: 0 15px 0 0;
           }
+          .altVerArtist {
+            @include flexbox;
+            @include justify-content(flex-start);
+            @include align-items(center);
+            min-width: calc(23% - 17.5px);
+            .playPauseBtn {
+              margin-right: 22px;
+            }
 
-          .playPauseBtn {
-            margin-right: 22px;
-          }
-
-          .filterName {
-            font-size: 13px;
-            font-weight: 400;
-            line-height: 1.5;
-            letter-spacing: -0.35px;
-            color: $middleGrey;
-            white-space: nowrap;
-            text-overflow: ellipsis;
-            overflow: hidden;
-            padding-right: 10px;
+            .filterName {
+              font-size: 13px;
+              font-weight: 400;
+              line-height: 1.5;
+              letter-spacing: -0.35px;
+              color: $middleGrey;
+              white-space: nowrap;
+              text-overflow: ellipsis;
+              overflow: hidden;
+              padding-right: 10px;
+            }
           }
 
           .waveTime {
@@ -2178,7 +2183,8 @@ hr {
           }
 
           .durationCount {
-            min-width: 10%;
+            min-width: 12%;
+            padding-inline: 7px;
           }
         }
       }
